Added Image Gallery to Homepage
Includes transition effect on Profile Photos
Added James W's profile

--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <title>WDI Jan 2017 NYC</title>
+  <link rel="stylesheet" href="css/default.css" />
 </head>
 <body>
   <h1>WDI Jan 2017 NYC</h1>
+
+  <div id="gallery">
+    <a href="robert.html"><div id="robert" class="profile">
+      <div class="name">Robert</div>
+    </div></a>
+    <a href="james_s.html"><div id="james_s" class="profile">
+      <div class="name">James S</div>
+    </div></a>
+    <a href="nick.html"><div id="nick" class="profile">
+      <div class="name">Nicholas</div>
+    </div></a>
+    <a href="steven.html"><div id="steven" class="profile">
+      <div class="name">Steven</div>
+    </div></a>
+    <a href="angelina.html"><div id="angelina" class="profile">
+      <div class="name">Angelina</div>
+    </div></a>
+    <a href="selcuk.html"><div id="selcuk" class="profile">
+      <div class="name">Selcuk</div>
+    </div></a>
+    <a href="mauricio.html"><div id="mauricio" class="profile">
+      <div class="name">Mauricio</div>
+    </div></a>
+    <a href="kyle.html"><div id="kyle" class="profile">
+      <div class="name">Kyle</div>
+    </div></a>
+    <a href="eric.html"><div id="eric" class="profile">
+      <div class="name">Eric</div>
+    </div></a>
+    <a href="alfe.html"><div id="alfe" class="profile">
+      <div class="name">Alfe</div>
+    </div></a>
+    <a href="jarvis.html"><div id="jarvis" class="profile">
+      <div class="name">Jarvis</div>
+    </div></a>
+    <a href="joel.html"><div id="joel" class="profile">
+      <div class="name">Joel</div>
+    </div></a>
+    <a href="james_w.html"><div id="james_w" class="profile">
+      <div class="name">James W</div>
+    </div></a>
+  </div><!--#gallery-->
 
   <h2>Check out our class</h2>
   <nav>
