Added PHP to cam.html languages

--- a/cam.html
+++ b/cam.html
@@ -48,6 +48,7 @@
       <li>JavaScript</li>
       <li>HTML/CSS</li>
       <li>Ruby</li>
+      <li>PHP</li>
     </ul>
 
     <p>In his free time, Cam enjoys recreational sports such as volleyball, soccer, tennis, and golf.  Favorite publications are the New Yorker and Harvard Business Review and has a red hot passion for Arsenal Football Club, by far the greatest team the world has ever seen.</p>
